--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Espaço Pilates - Bem estar e Qualidade de Vida</title>
+    <title>Kaf Gráfica - A sua gráfica em São Luis</title>
 
     <meta name="google-site-verification" content="dijahSDpUQLIMA2-m_rZ0xHG1wcmXDMltN6pI7Lbz-c" />
 
@@ -46,47 +46,9 @@
         "logo": "https:\/\/espacopilatesbelem.com.br\/assets\/img\/lgo-m.png"
     }</script>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WGPVQK9');</script>
-    <!-- End Google Tag Manager -->
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135475677-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-135475677-1');
-    </script>
-    <!-- Facebook Pixel Code -->
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-            n.queue=[];t=b.createElement(e);t.async=!0;
-            t.src=v;s=b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t,s)}(window, document,'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '808171399583040');
-        fbq('track', 'PageView');
-    </script>
 </head>
 <body>
-<noscript><img height="1" width="1" style="display:none"
-               src="https://www.facebook.com/tr?id=808171399583040&ev=PageView&noscript=1"
-/></noscript>
-
-<!-- End Facebook Pixel Code -->
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGPVQK9"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 <header id="header-wrap">
     <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar indigo">
         <div class="container">
