--- a/bar-e-restaurante.html
+++ b/bar-e-restaurante.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Kaf Gráfica - A sua gráfica em São Luis</title>
+    <title>Kaf Gráfica - A sua gráfica</title>
 
-    <meta name="google-site-verification" content="dijahSDpUQLIMA2-m_rZ0xHG1wcmXDMltN6pI7Lbz-c"/>
+    <meta name="google-site-verification" content=""/>
 
 
     <meta name="description"
@@ -15,12 +15,12 @@
     <meta name="keywords" content="pilates, fisioterapia, saúde, bem estar, auto-estima">
     <meta name="theme-color" content="#fff">
     <meta property="og:locale" content="pt_BR">
-    <meta property="og:url" content="espacopilatesbelem.com.br">
-    <meta property="og:title" content="Espaço Pilates - Bem estar e Qualidade de Vida">
-    <meta property="og:site_name" content="Espaço Pilates - Bem estar e Qualidade de Vida">
+    <meta property="og:url" content="kafgrafica.com.br">
+    <meta property="og:title" content="EKaf Gráfica - A sua gráfica">
+    <meta property="og:site_name" content="Kaf Gráfica - A sua gráfica">
     <meta property="og:description"
           content="Seja renovado com o Pilates, alivie dores, controle seu peso e eleve sua auto-estima em 2 semanas. Clique e descubra os benefícios do Pilates. Aula experimental gratuita limitada.">
-    <meta property="og:image" content="https://espacopilatesbelem.com.br/assets/img/Facebook-og.jpg">
+    <meta property="og:image" content="https://kafgrafica.com.br/assets/img/Facebook-og.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="628">
@@ -36,14 +36,13 @@
     <script type='application/ld+json'>{
         "@context": "https:\/\/schema.org",
         "@type": "Organization",
-        "url": "https:\/\/espacopilatesbelem.com.br\/",
+        "url": "https:\/\/kafgrafica.com.br\/",
         "sameAs": [
-            "https:\/\/www.facebook.com\/espacopilatesbel\/",
-            "https:\/\/www.instagram.com\/espacopilatesbelem\/"
+            "https:\/\/www.instagram.com\/kaf_grafica\/"
         ],
-        "@id": "https:\/\/espacopilatesbelem.com.br\/#organization",
-        "name": "Espaço Pilates - Bem estar e Qualidade de Vida",
-        "logo": "https:\/\/espacopilatesbelem.com.br\/assets\/img\/lgo-m.png"
+        "@id": "https:\/\/kafgrafica.com.br\/#organization",
+        "name": "Kaf Gráfica - A sua gráfica",
+        "logo": "https:\/\/kafgrafica.com.br\/assets\/img\/lgo-m.png"
     }</script>
 
 
