--- a/saude.html
+++ b/saude.html
@@ -62,10 +62,10 @@
                 </button>
                 <a href="/" class="navbar-brand"><img
                         src="assets/img/lgo-w.png"
-                        alt="Espaço Pilates Belém" title="Espaço Pilates Belém"></a>
+                        alt="Espaço Pilates Belém" title="Kaf Gráfica - A sua gráfica"></a>
                 <a href="/" class="navbar-brand-alt"><img
                         src="assets/img/lgo-m.png"
-                        alt="Espaço Pilates Belém" title="Espaço Pilates Belém"></a>
+                        alt="Espaço Pilates Belém" title="Kaf Gráfica - A sua gráfica"></a>
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -133,15 +133,14 @@
             </li>
         </ul>
     </nav>
-    <div id="hero-area" class="hero-area-bg">
+    <div id="hero-area" class="hero-area-bg-saude">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 text-center">
                     <div class="contents">
                         <h1 class="head-title">Conquiste Mais <br>Pacientes Agora</h1>
-                        <p class="script-font">Use o poder dos impressos gráficos para aumentar sua<br> visibilidade e atrair mais clientes
-                            Seta pra baixo</p>
+                        <p class="script-font">Use o poder dos impressos gráficos para aumentar sua visibilidade e atrair mais clientes.</p>
                         <div class="header-button">
                             <p class="arrow-b">Saiba Mais</p>
                             <a href="#beneficios"><img class="arrow bounce" src="assets/img/arrow.png"></a>
@@ -220,6 +219,7 @@
             <div class="col-md-2 col-lg-2 col-xs-12" style="margin-bottom: 20px;"></div>
             <div class="col-md-4 col-lg-4 col-xs-12" style="margin-bottom: 20px;">
                 <div class="services-item">
+                    <h3 style="font-weight: 600;min-height: 0;margin-top: 25px;font-size: 25px;color: #B8000B!important;">Combo Básico</h3>
                     <img src="assets/img/Mockup%20Pacote%20básico%2001.png" style="width: 100%; max-width: 70%">
                     <div class="services-content">
                         <h3 style="font-weight: 500;min-height: 0;margin-top: 13px;font-size: 21px;">500 cartões de visita</h3>
@@ -233,6 +233,7 @@
             <!-- Services item -->
             <div class="col-md-4 col-lg-4 col-xs-12" style="margin-bottom: 20px;">
                 <div class="services-item">
+                    <h3 style="font-weight: 600;min-height: 0;margin-top: 25px;font-size: 25px;color: #B8000B!important;">Combo + Pacientes</h3>
                     <img src="assets/img/Mockup%20Pacote%20Venda%20+%2002.png" style="width: 100%; max-width: 70%">
                     <div class="services-content">
                         <h3 style="font-weight: 500;min-height: 0;margin-top: 13px;font-size: 21px;">1000 cartões de visita</h3>
@@ -254,7 +255,8 @@
         <div class="row">
             <div class="col-md-2 col-lg-2 col-xs-12" style="margin-bottom: 20px;"></div>
             <div class="col-md-8 col-lg-8 col-xs-12" style="margin-bottom: 20px;">
-                <img src="assets/img/Tabela%20Kaf%20diferencial.png" style="width: 100%">
+                <img class="tabela-desk" src="assets/img/Tabela%20Kaf%20diferencial.png" style="width: 100%">
+                <img class="tabela-mobile" src="assets/img/Tabela-Kaf-diferencial-mobile.png" style="width: 100%">
             </div>
             <div class="col-md-2 col-lg-2 col-xs-12" style="margin-bottom: 20px;"></div>
         </div>
