--- a/bar-e-restaurante.html
+++ b/bar-e-restaurante.html
@@ -5,21 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Kaf Gráfica - A sua gráfica</title>
+    <title>Kaf Gráfica - Material Gráfico para Bares e Restaurantes</title>
 
     <meta name="google-site-verification" content=""/>
 
 
     <meta name="description"
-          content="Seja renovado com o Pilates, alivie dores, controle seu peso e eleve sua auto-estima em 2 semanas. Clique e descubra os benefícios do Pilates. Aula experimental gratuita limitada.">
-    <meta name="keywords" content="pilates, fisioterapia, saúde, bem estar, auto-estima">
+          content="Use o poder dos impressos para atrair mais clientes passando uma imagem profissional. Recomendado para bares, restaurantes, pizzarias, confeitarias, cafés, etc. Somos especialistas nesse segmento. Preço incrível Atendimento diferenciado. Orçamento na hora. Pagamento parcelado sem juros.
+">
+    <meta name="keywords" content="bares, restaurantes">
     <meta name="theme-color" content="#fff">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:url" content="kafgrafica.com.br">
-    <meta property="og:title" content="Kaf Gráfica - A sua gráfica">
-    <meta property="og:site_name" content="Kaf Gráfica - A sua gráfica">
+    <meta property="og:title" content="Kaf Gráfica - Material Gráfico para Bares e Restaurantes">
+    <meta property="og:site_name" content="Kaf Gráfica - Material Gráfico para Bares e Restaurantes">
     <meta property="og:description"
-          content="Seja renovado com o Pilates, alivie dores, controle seu peso e eleve sua auto-estima em 2 semanas. Clique e descubra os benefícios do Pilates. Aula experimental gratuita limitada.">
+          content="Use o poder dos impressos para atrair mais clientes passando uma imagem profissional. Recomendado para bares, restaurantes, pizzarias, confeitarias, cafés, etc. Somos especialistas nesse segmento. Preço incrível Atendimento diferenciado. Orçamento na hora. Pagamento parcelado sem juros.
+">
     <meta property="og:image" content="https://kafgrafica.com.br/assets/img/Facebook-og.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
@@ -74,7 +76,7 @@
             "https:\/\/www.instagram.com\/kaf_grafica\/"
         ],
         "@id": "https:\/\/kafgrafica.com.br\/#organization",
-        "name": "Kaf Gráfica - A sua gráfica",
+        "name": "Kaf Gráfica - Material Gráfico para Bares e Restaurantes",
         "logo": "https:\/\/kafgrafica.com.br\/assets\/img\/lgo-m.png"
     }</script>
 
@@ -103,10 +105,10 @@
                 </button>
                 <a href="/" class="navbar-brand"><img
                         src="assets/img/lgo-w.png"
-                        alt="Espaço Pilates Belém" title="Kaf Gráfica - A sua gráfica"></a>
+                        alt="Espaço Pilates Belém" title="Kaf Gráfica - Material Gráfico para Bares e Restaurantes"></a>
                 <a href="/" class="navbar-brand-alt"><img
                         src="assets/img/lgo-m.png"
-                        alt="Espaço Pilates Belém" title="Kaf Gráfica - A sua gráfica"></a>
+                        alt="Espaço Pilates Belém" title="Kaf Gráfica - Material Gráfico para Bares e Restaurantes"></a>
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
