--- a/saude/index.html
+++ b/saude/index.html
@@ -498,7 +498,7 @@
     </div>
 </div>
 
-<script>
+<!--<script>
     document.onmouseleave = function() {
         document.querySelector("#overlay").style.setProperty("display", "block", "important");
     };
@@ -506,7 +506,8 @@
     document.querySelector('#fecharpop').addEventListener('click', function (e) {
         document.querySelector('#overlay').remove();
     })
-</script>
+</script>-->
+<script type="text/javascript" data-account-id="376" src="https://f.popupsmart.com/app/js/api.min.js" async></script>
 <!-- Go to Top Link -->
 <a href="#" class="back-to-top">
     <i class="icon-arrow-up"></i>
