--- a/saude/index.html
+++ b/saude/index.html
@@ -498,16 +498,18 @@
     </div>
 </div>
 
-<!--<script>
-    document.onmouseleave = function() {
-        document.querySelector("#overlay").style.setProperty("display", "block", "important");
-    };
-
-    document.querySelector('#fecharpop').addEventListener('click', function (e) {
-        document.querySelector('#overlay').remove();
-    })
-</script>-->
-<script type="text/javascript" data-account-id="376" src="https://f.popupsmart.com/app/js/api.min.js" async></script>
+<script>
+    window.SGPMPopupLoader=window.SGPMPopupLoader||{ids:[],popups:{},call:function(w,d,s,l,id){
+            w['sgp']=w['sgp']||function(){(w['sgp'].q=w['sgp'].q||[]).push(arguments[0]);};
+            var sg1=d.createElement(s),sg0=d.getElementsByTagName(s)[0];
+            if(SGPMPopupLoader && SGPMPopupLoader.ids && SGPMPopupLoader.ids.length > 0){SGPMPopupLoader.ids.push(id); return;}
+            SGPMPopupLoader.ids.push(id);
+            sg1.onload = function(){SGPMPopup.openSGPMPopup();}; sg1.async=true; sg1.src=l;
+            sg0.parentNode.insertBefore(sg1,sg0);
+            return {};
+        }};
+    SGPMPopupLoader.call(window,document,'script','https://popupmaker.com/assets/lib/SGPMPopup.min.js','14f4b1bb');
+</script>
 <!-- Go to Top Link -->
 <a href="#" class="back-to-top">
     <i class="icon-arrow-up"></i>
