--- a/alimentacao/index.html
+++ b/alimentacao/index.html
@@ -499,7 +499,7 @@
             sg0.parentNode.insertBefore(sg1,sg0);
             return {};
         }};
-    SGPMPopupLoader.call(window,document,'script','https://popupmaker.com/assets/lib/SGPMPopup.min.js','14f4b1bb', 'a1a34599');
+    SGPMPopupLoader.call(window,document,'script','https://popupmaker.com/assets/lib/SGPMPopup.min.js','a1a34599');
 </script>
 </body>
 </html>
